Fix toolkit guide card spacing

--- a/_sass/components/_toolkit.scss
+++ b/_sass/components/_toolkit.scss
@@ -69,13 +69,15 @@
 }
 
 .toolkit-flex-item-img-container {
-    max-height: 16.95rem;
+    height: 16em;
     overflow: hidden;
 }
 
-.toolkit-flex-item-img-container svg {
+.toolkit-flex-item-img-container svg, 
+.toolkit-flex-item-img-container img {
     width: 100%;
     height: 100%;
+    object-fit: cover;
 }
 
 .resource-svg-icons {
